<resources>
    <string name="app_name">Google Plus Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="Name_me">Name :</string>
    <string name="Email_me">Email :</string>
    <string name="Start_btn">Start</string>
    <string name="txt_about">About You.............</string>
</resources>
